# rust-shell

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: rust.yml
examples/: basic-aliases.rstsh  basic-exports.rstsh  ps1-commands.rstsh  ps1.rstsh
src/: builtins.rs  cli.rs  lineutils.rs  main.rs  ps1.rs
